--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\IScheduler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Init.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Buff\ComBuffs.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Buff.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Skill\ComSkills.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Base\EntityIndexEnum.cs" />
