--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComOwnerEntity.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\ComUniDamage.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Log\Log.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\Collider\ComCollider.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniGameMode.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Assets\Hotfix\Core\Event\GameEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Runtime\HotfixBridge.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\RedDot\RedDotManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\Data\CalcDamageInfo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Input\InputManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Image\ImageExtension.cs" />
@@ -158,6 +160,7 @@
     <Compile Include="Assets\Hotfix\Logic\UI\UIRoot\UIRootMain.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComView\ComView.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\IDamage.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBSkill.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComTag.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\SkillProcess\SkillProcess.cs" />
@@ -174,6 +177,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Battle\BattleGameModeState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Transform\TransformExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\SpriteRenderer\SpriteRendererExtension.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\Data\DamageType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Scene\SceneType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\LinkedList.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Config\ConfigManager.cs" />
@@ -245,6 +249,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleRequestAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Helper\DefaultLogHelper.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Extension\WNodeExtension.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\Data\DamageSource.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Buff\BuffState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\Death\ComDeath.cs" />
     <Compile Include="Assets\Hotfix\Core\Event\EventManager.cs" />
@@ -256,6 +261,7 @@
     <Compile Include="Assets\Hotfix\Runtime\ECS\System\SysCollision.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Popup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Camera\CameraManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\DamageBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\IScheduler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Init.cs" />
@@ -276,6 +282,7 @@
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelAttribute.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.Object.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\Data\DamageProp.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\SkillProcess\ComSkillProcess.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Timer\TimerManager.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Entry.cs" />
