--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Assets\Launcher\Utility\Extension\Byte\ByteExtension.cs" />
     <Compile Include="Assets\Launcher\Utility\Rijndael\RijndaelUtility.cs" />
     <Compile Include="Assets\Launcher\Event\EventGroup.cs" />
+    <Compile Include="Assets\Launcher\UI\CustomControl\UIImageCtrl.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\UserEvent.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmUpdateManifest.cs" />
     <Compile Include="Assets\Launcher\Launcher\StaticMethod\MonoStaticMethod.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmDownloadOver.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmInitialize.cs" />
     <Compile Include="Assets\Launcher\Utility\Extension\Transform\TransformExtension.cs" />
+    <Compile Include="Assets\Launcher\UI\CustomControl\UISpriteCtrl.cs" />
     <Compile Include="Assets\Launcher\Launcher\Patch\FsmNode\FsmUpdateVersion.cs" />
     <Compile Include="Assets\Launcher\Launcher\Launcher.GameServer.cs" />
     <Compile Include="Assets\Launcher\Asset\ResObject.cs" />
