--- a/Assets/Editor/Unity.Editor.asmdef
+++ b/Assets/Editor/Unity.Editor.asmdef
@@ -6,7 +6,9 @@
         "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
         "GUID:467916a821f46ee41a7cbd0032e57641",
         "GUID:4d1926c9df5b052469a1c63448b7609a",
-        "GUID:2373f786d14518f44b0f475db77ba4de"
+        "GUID:2373f786d14518f44b0f475db77ba4de",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:02c11f442ffc148a9b44d2aa0618ec34"
     ],
     "includePlatforms": [
         "Editor"
