--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicContext.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\GenericVariable.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\GameObjectPool\Decorators\SetParentDecorator.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\System\SysViewTransform.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\System\SysSkillCD.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicEntity.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Action.cs" />
