--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Camera\CameraManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\ComUniDamage\DamageBase.cs" />
     <Compile Include="Assets\Hotfix\Logic\Event\GameEvent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\Component\FSM\FSM.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\IScheduler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Init.cs" />
